--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.10.0"
+    "@astrojs/mdx": "^4.3.0",
+    "@fontsource-variable/fira-code": "^5.2.6",
+    "@fontsource-variable/overpass": "^5.2.6",
+    "@fontsource-variable/roboto-flex": "^5.2.6",
+    "@tailwindcss/vite": "^4.1.10",
+    "astro": "^5.10.0",
+    "astro-favicons": "^3.1.5",
+    "astro-seo": "^0.8.4",
+    "tailwindcss": "^4.1.10"
   }
 }
